<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Touija</string>
    <string name="action_settings">Settings</string>
    <string name="left_button_description">Turn Left</string>
    <string name="right_button_description">Turn Right</string>
    <string name="forward_button_description">Move Forward</string>
    <string name="stay_button_description">Stay</string>
    <string name="header_description">Touija</string>

</resources>
